// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App/> tree <Badge/> component render component 1`] = `
<div>
  <li
    class="uk-active"
  >
    <a
      href="/"
      uk-switcher-item=""
    >
      USERS
    </a>
  </li>
</div>
`;

exports[`<App/> tree <Header/> component render component with session 1`] = `
<div>
  <div
    uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky"
  >
    <nav
      class="sc-gsTCUz lGSmP uk-navbar uk-navbar-container uk-margin"
    >
      <div
        class="uk-navbar-left"
      >
        <a
          class="uk-navbar-item uk-logo"
          href="/"
        >
          <span
            class="sc-hBEYos hfgEZq"
          >
            Wlog
          </span>
        </a>
      </div>
      <div
        class="uk-navbar-right"
      >
        <ul
          class="uk-navbar-nav"
        >
          <li
            class="uk-visible"
          >
            <div
              class="mid"
            >
              <label
                class="rocker rocker-small"
              >
                <input
                  type="checkbox"
                />
                <span
                  class="switch-left"
                >
                  🌚
                </span>
                <span
                  class="switch-right"
                >
                  🌞
                </span>
              </label>
            </div>
          </li>
          <li
            class="uk-visible@s"
          >
            <a
              href="/user/FakeUser1"
            >
              <span
                class="sc-hBEYos hfgEZq"
              >
                FAKEUSER1
              </span>
            </a>
          </li>
          <li
            class="uk-hidden@s"
          >
            <a
              href="/user/FakeUser1"
            >
              <span
                class="sc-hBEYos hfgEZq"
              >
                FAKEUSER1
              </span>
            </a>
          </li>
        </ul>
      </div>
      <div
        class="uk-navbar-center"
      >
        <a
          class="uk-navbar-toggle"
          href="/create"
        >
          <span
            class="white"
            uk-icon="icon:plus-circle"
          />
        </a>
      </div>
    </nav>
  </div>
</div>
`;

exports[`<App/> tree <Header/> component render component without session 1`] = `
<div>
  <div
    uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky"
  >
    <nav
      class="sc-gsTCUz lGSmP uk-navbar uk-navbar-container uk-margin"
    >
      <div
        class="uk-navbar-left"
      >
        <a
          class="uk-navbar-item uk-logo"
          href="/"
        >
          <span
            class="sc-hBEYos hfgEZq"
          >
            Wlog
          </span>
        </a>
      </div>
      <div
        class="uk-navbar-right"
      >
        <ul
          class="uk-navbar-nav"
        >
          <li
            class="uk-visible"
          >
            <div
              class="mid"
            >
              <label
                class="rocker rocker-small"
              >
                <input
                  type="checkbox"
                />
                <span
                  class="switch-left"
                >
                  🌚
                </span>
                <span
                  class="switch-right"
                >
                  🌞
                </span>
              </label>
            </div>
          </li>
          <li
            class="uk-visible@s"
          >
            <a
              class=""
              href="/sign"
            >
              <span
                class="sc-hBEYos hfgEZq"
              >
                Log in
              </span>
            </a>
          </li>
          <li
            class="uk-hidden@s"
          >
            <span
              class="sc-hBEYos hfgEZq"
            >
               
              <a
                href="/sign"
                uk-icon="icon:user; ratio:1.3"
              />
            </span>
          </li>
        </ul>
      </div>
      <div
        class="uk-navbar-center"
      >
        <a
          class="uk-navbar-toggle"
          href="/create"
        >
          <span
            class="white"
            uk-icon="icon:plus-circle"
          />
        </a>
      </div>
    </nav>
  </div>
</div>
`;

exports[`<App/> tree <Users/> component render component 1`] = `
<div>
  <div
    class="uk-padding-small "
  >
    <div
      aria-level="1"
      class="sc-iNqMTl caUfbq rdt_TableHeader"
      role="heading"
    >
      <div
        class="sc-jeGSBP VcKEu"
      />
      <div
        class="sc-eJMQSu jjnSlf"
      />
      <div
        class="sc-laRPJI colNXi"
      >
        <div
          class="sc-jgHCyG fOMvAf"
        />
        <div
          class="sc-gTgzIj hOSxzy"
        />
      </div>
    </div>
    <div
      class="sc-ehSCib OrIOp uk-table"
    >
      <div
        class="sc-gGmIRh ZTqY"
      >
        <div
          class="sc-cBNfnY euufGM rdt_Table"
          role="table"
        >
          <div
            class="sc-citwmv bxuEHR rdt_TableHead"
            role="rowgroup"
          >
            <div
              class="sc-jcVebW dhArjE rdt_TableHeadRow"
              role="row"
            >
              <div
                class="sc-bZSQDF sc-iUuytg sc-AzgDb fCetVn jqoqZr eSvaaC rdt_TableCol"
              >
                <div
                  class="sc-khAkjo frXzdJ rdt_TableCol_Sortable"
                  id="column-role"
                  role="columnheader"
                  tabindex="0"
                >
                  <div>
                    Role
                  </div>
                  <span
                    class="sc-cOajty eopBUQ"
                  >
                    ▲
                  </span>
                </div>
              </div>
              <div
                class="sc-bZSQDF sc-iUuytg sc-AzgDb fCetVn dceiaa eSvaaC rdt_TableCol"
              >
                <div
                  class="sc-khAkjo frXzdJ rdt_TableCol_Sortable"
                  id="column-name"
                  role="columnheader"
                  tabindex="0"
                >
                  <div>
                    Full name
                  </div>
                  <span
                    class="sc-cOajty eopBUQ"
                  >
                    ▲
                  </span>
                </div>
              </div>
              <div
                class="sc-bZSQDF sc-iUuytg sc-AzgDb fCetVn jqoqZr eSvaaC rdt_TableCol"
              >
                <div
                  class="sc-khAkjo frXzdJ rdt_TableCol_Sortable"
                  id="column-username"
                  role="columnheader"
                  tabindex="0"
                >
                  <div>
                    Username
                  </div>
                  <span
                    class="sc-cOajty eopBUQ"
                  >
                    ▲
                  </span>
                </div>
              </div>
              <div
                class="sc-bZSQDF sc-iUuytg sc-AzgDb fCetVn bFRJmG eSvaaC rdt_TableCol"
              >
                <div
                  class="sc-khAkjo frXzdJ rdt_TableCol_Sortable"
                  id="column-datelog"
                  role="columnheader"
                  tabindex="0"
                >
                  <div>
                    Date log
                  </div>
                  <span
                    class="sc-cOajty eopBUQ"
                  >
                    ▲
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-higXBA heQaSV rdt_TableBody"
            offset="250px"
            role="rowgroup"
          >
            <div
              class="sc-bBrOnJ fqYGIJ rdt_TableRow"
              id="row-0"
              role="row"
            >
              <div
                class="sc-bZSQDF sc-iUuytg sc-iBaPrD kowkfE jqoqZr ddkdSq rdt_TableCell"
                data-tag="allowRowEvents"
                id="cell-x7MioR_vlJ-undefined"
                role="gridcell"
              >
                <select
                  class="sc-iqHYGH hSHZHm  uk-text-bold"
                >
                  <option
                    class="sc-crrsfI jDgwbl"
                    value="ADMIN"
                  >
                    ADMIN
                  </option>
                  <option
                    class="sc-crrsfI jDgwbl"
                    value="REDACTOR"
                  >
                    REDACTOR
                  </option>
                  <option
                    class="sc-crrsfI jDgwbl"
                    value="MODERADOR"
                  >
                    MODERADOR
                  </option>
                  <option
                    class="sc-crrsfI jDgwbl"
                    value="LECTOR"
                  >
                    LECTOR
                  </option>
                </select>
              </div>
              <div
                class="sc-bZSQDF sc-iUuytg sc-iBaPrD kowkfE dceiaa ddkdSq rdt_TableCell"
                data-tag="allowRowEvents"
                id="cell-OK5x7ozMMh-undefined"
                role="gridcell"
              >
                <div
                  class="uk-flex uk-flex-middle uk-flex-center"
                >
                  <p
                    class="uk-text-bold"
                  >
                    Jorge Rojas
                  </p>
                </div>
              </div>
              <div
                class="sc-bZSQDF sc-iUuytg sc-iBaPrD kowkfE jqoqZr ddkdSq rdt_TableCell"
                data-tag="allowRowEvents"
                id="cell-07rNtZXQZX-undefined"
                role="gridcell"
              >
                <p
                  class="uk-text-bold"
                >
                  ...
                </p>
              </div>
              <div
                class="sc-bZSQDF sc-iUuytg sc-iBaPrD kowkfE bFRJmG ddkdSq rdt_TableCell"
                data-tag="allowRowEvents"
                id="cell-MmhCuOT_x5-undefined"
                role="gridcell"
              >
                <p
                  class="uk-text-bold"
                />
              </div>
            </div>
            <div
              class="sc-bBrOnJ fqYGIJ rdt_TableRow"
              id="row-1"
              role="row"
            >
              <div
                class="sc-bZSQDF sc-iUuytg sc-iBaPrD kowkfE jqoqZr ddkdSq rdt_TableCell"
                data-tag="allowRowEvents"
                id="cell-x7MioR_vlJ-undefined"
                role="gridcell"
              >
                <select
                  class="sc-iqHYGH hSHZHm  uk-text-bold"
                >
                  <option
                    class="sc-crrsfI jDgwbl"
                    value="ADMIN"
                  >
                    ADMIN
                  </option>
                  <option
                    class="sc-crrsfI jDgwbl"
                    value="REDACTOR"
                  >
                    REDACTOR
                  </option>
                  <option
                    class="sc-crrsfI jDgwbl"
                    value="MODERADOR"
                  >
                    MODERADOR
                  </option>
                  <option
                    class="sc-crrsfI jDgwbl"
                    value="LECTOR"
                  >
                    LECTOR
                  </option>
                </select>
              </div>
              <div
                class="sc-bZSQDF sc-iUuytg sc-iBaPrD kowkfE dceiaa ddkdSq rdt_TableCell"
                data-tag="allowRowEvents"
                id="cell-OK5x7ozMMh-undefined"
                role="gridcell"
              >
                <div
                  class="uk-flex uk-flex-middle uk-flex-center"
                >
                  <p
                    class="uk-text-bold"
                  >
                    Mamberroi One
                  </p>
                </div>
              </div>
              <div
                class="sc-bZSQDF sc-iUuytg sc-iBaPrD kowkfE jqoqZr ddkdSq rdt_TableCell"
                data-tag="allowRowEvents"
                id="cell-07rNtZXQZX-undefined"
                role="gridcell"
              >
                <p
                  class="uk-text-bold"
                >
                  ...
                </p>
              </div>
              <div
                class="sc-bZSQDF sc-iUuytg sc-iBaPrD kowkfE bFRJmG ddkdSq rdt_TableCell"
                data-tag="allowRowEvents"
                id="cell-MmhCuOT_x5-undefined"
                role="gridcell"
              >
                <p
                  class="uk-text-bold"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <nav
        class="sc-dwfUOf eLktq rdt_Pagination"
      >
        <span
          class="sc-aemoO sc-hlTvYk hAqvUL knCDij"
        >
          Filas por página:
        </span>
        <div
          class="sc-fWSCIC ditdgc"
        >
          <select
            aria-label="Filas por página:"
            class="sc-GqfZa cqfvhd"
          >
            <option
              selected=""
              value="10"
            >
              10
            </option>
            <option
              value="15"
            >
              15
            </option>
            <option
              value="20"
            >
              20
            </option>
            <option
              value="25"
            >
              25
            </option>
            <option
              value="30"
            >
              30
            </option>
          </select>
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </div>
        <span
          class="sc-aemoO sc-jONnTn hAqvUL irDoZK"
        >
          1-2 de 2
        </span>
        <div
          class="sc-jHVexB lguJCt"
        >
          <button
            aria-disabled="true"
            aria-label="First Page"
            class="sc-TmcTc gZdQuY"
            disabled=""
            id="pagination-first-page"
            type="button"
          >
            <svg
              aria-hidden="true"
              height="24"
              role="presentation"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
              />
              <path
                d="M24 24H0V0h24v24z"
                fill="none"
              />
            </svg>
          </button>
          <button
            aria-disabled="true"
            aria-label="Previous Page"
            class="sc-TmcTc gZdQuY"
            disabled=""
            id="pagination-previous-page"
            type="button"
          >
            <svg
              aria-hidden="true"
              height="24"
              role="presentation"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </button>
          <button
            aria-disabled="true"
            aria-label="Next Page"
            class="sc-TmcTc gZdQuY"
            disabled=""
            id="pagination-next-page"
            type="button"
          >
            <svg
              aria-hidden="true"
              height="24"
              role="presentation"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </button>
          <button
            aria-disabled="true"
            aria-label="Last Page"
            class="sc-TmcTc gZdQuY"
            disabled=""
            id="pagination-last-page"
            type="button"
          >
            <svg
              aria-hidden="true"
              height="24"
              role="presentation"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
              />
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
            </svg>
          </button>
        </div>
      </nav>
    </div>
  </div>
</div>
`;
